fix(material/autocomplete): autocomplete panel top is cut off in landscape mode
Fixes a bug in the Angular Material Autocomplete component where the
autocomplete panel listbox top is cut off by the device screen when being
viewed in landscape mode. This is because the listbox max-height is greater
than the distance between the top of the autocomplete input and the screen top.

Fixes b/284148377

--- a/src/material/autocomplete/autocomplete.scss
+++ b/src/material/autocomplete/autocomplete.scss
@@ -54,3 +54,10 @@ div.mat-mdc-autocomplete-panel {
 mat-autocomplete {
   display: none;
 }
+
+// Prevents autocomplete panel from being cut-off from being viewed in landscape orientation.
+@media all and (orientation: landscape) {
+  div.mat-mdc-autocomplete-panel {
+    max-height: 55vh;
+  }
+}
